project(GameProject)
cmake_minimum_required(VERSION 2.8.12)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()
add_executable(conanTest main.cpp startup.cpp startup.h input.cpp input.h sprite.cpp sprite.h update.cpp update.h text.cpp text.h enemyManager.cpp enemyManager.h enemy.h enemy.cpp bullet.cpp bullet.h player.cpp player.h)
target_link_libraries(conanTest ${CONAN_LIBS})
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "conanTest")